# dpg

./: .gitignore  .travis.yml  Cargo.toml  README.MD  appveyor.yml
src/: dices.rs  diceware-en.txt  diceware-pl.txt  diceware_info.rs  lib.rs  macros.rs  main.rs  option_parser.rs  passwords.rs
src/mrandom/: mod.rs
tests/: lib.rs  tests.rs
