[package]
name = "dpg"
version = "0.1.1"
authors = ["MaciekTalaska <maciek.talaska@gmail.com>"]
description = "generate password(s) using diceware method & crypto secure random numbers"
readme = "README.MD"
license = "MIT"
repository = "https://github.com/MaciekTalaska/dpg"
keywords = ["library", "random", "security", "generator", "password"]
categories = ["command-line-utilities", "cryptography", "authentication"]

[badges]
appveyor = { repository = "MaciekTalaska/dpg", branch = "master", service = "github" }
travis-ci = { repository = "MaciekTalaska/dpg", branch = "master" }

[dependencies]
rand = "0.4.2"
clipboard = "0.4.6"

[profile.release]
lto = true
opt-level = "z"
